--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://purpleturtll.github.io"
+baseURL = "https://purpleturtll.github.io/wierszykidlagroszka"
 languageCode = "pl-pl"
 title = "Groszkowe Wierszyki"
 theme = "noteworthy"
